--- a/1455_检查单词是否为句中其他单词的前缀.md
+++ b/1455_检查单词是否为句中其他单词的前缀.md
@@ -63,3 +63,45 @@ class Solution {
     }
 }
 ```
+
+## 方法二：
+
+```
+class Solution {
+    public int isPrefixOfWord(String sentence, String searchWord) {
+//   1. 将字符串数组serchWord转换为字符数组
+//   2. 设置指针，遇到空格置为空，count++
+//   3. 对比空格后的字符，若相同，则pos++,否则pos置为-1
+//   4. 如果pos为serchWord的长度，则返回count，
+    char[] word = searchWord.toCharArray();
+    
+    int count =1,pos=0;
+
+        for(int i =0;i<sentence.length();i++){
+            System.out.println(pos);
+            char c = sentence.charAt(i);
+            
+            if(c == ' '){
+                count++;
+                pos = 0;
+                continue;//如果不写continue那么下面还会对c进行比较，然后对pos进行赋值
+            }
+            if(pos == -1){
+                continue;
+            }
+
+            if( c==word[pos]){
+                pos++;
+            }else {
+                 pos = -1;
+                continue;
+            }
+            
+            if(pos == word.length){
+                return count;
+            }
+        }
+    return -1;
+    }
+}
+```
