--- a/递归合集/地下城游戏.md
+++ b/递归合集/地下城游戏.md
@@ -1,37 +1,97 @@
+# 地下城游戏
+**使用递归会超时** 
 ```
 class Solution {
+    int res;
     public int calculateMinimumHP(int[][] dungeon) {
-        ArrayList<int[]> arr = new ArrayList<int[]>();
-        
-        int res=Integer.MIN_VALUE;
+        res=Integer.MIN_VALUE;
         int min=Integer.MAX_VALUE;
 
-        res = dfs(dungeon,0,0,min,0,res);
+        res = dfs(dungeon,0,0,min,0);
+        res = res>0?1:1-res;
         return res;
 
         
     }
-    public int dfs(int[][] dungeon,int i,int j,int min,int sum,int res){
+    public int dfs(int[][] dungeon,int i,int j,int min,int sum){
+        //min用来跟踪走每条路径过程中的最小值
+        //res用来跟踪所有路径中min的最大值
+        int ans = Integer.MIN_VALUE;
         sum+=dungeon[i][j];
         min = Math.min(min,sum);
-        System.out.println("i="+i+",j="+j+",min="+min+",sum="+sum+",res="+res);
 
         if(i==dungeon.length-1 && j == dungeon[0].length-1){
-        
         res = Math.max(res,min);
-        System.out.println(res);
+        // System.out.println(res);
         min =0;
-        return res;
         }
+        System.out.println("i="+i+",j="+j+",min="+min+",sum="+sum+",res="+res);
+
+        
         
         if(i<=dungeon.length-2 && j<=dungeon[0].length-1){
-            dfs(dungeon,i+1,j,min,sum,res);
+            dfs(dungeon,i+1,j,min,sum);
         }
      
-         if(i<=dungeon.length-1 && j<=dungeon[0].length-2){
-            dfs(dungeon,i,j+1,min,sum,res);
+        if(i<=dungeon.length-1 && j<=dungeon[0].length-2){
+            dfs(dungeon,i,j+1,min,sum);
         }
+   
         return res;
+    }
+}
+```
+
+# 方法二：反向dp
+有两个重要的信息需要跟踪：每条路径行走过程中需要消耗的最大能量，所有路径中这些最大能量的最小值。
+每条路径行走过程中需要消耗最大能量可能出现再当前位置之后，所以当前位置走到终点所需血量与后面的值有关，所以需要使用反向的dp。
+```
+class Solution {
+    public int calculateMinimumHP(int[][] dungeon) {
+        int m =dungeon.length,n=dungeon[0].length;
+        int[][] dp = new int[m][n];
+        dp[m-1][n-1]= dungeon[m-1][n-1]>0?1:1-dungeon[m-1][n-1];
+
+        // for(int i=m-1;i>=0;i--){
+        for(int i=m-1;i>=0;i--){
+            for(int j = n-1;j>=0;j--){
+                if(i<=m-2 && i>=0 && j<=n-2 && j>=0){
+                    dp[i][j] = Math.max(Math.min(dp[i+1][j],dp[i][j+1])-dungeon[i][j],1);
+                }
+                if(i==m-1 && j<=n-2){
+                    dp[i][j] = Math.max(dp[i][j+1]-dungeon[i][j],1);
+                }
+                if(j==n-1 && i<=m-2){
+                    dp[i][j] = Math.max(dp[i+1][j]-dungeon[i][j],1);
+                }
+            }
+        }
+        return dp[0][0];
+    }
+}
+```
+## 方法二的优化：
+减少判断语句可以提升时间复杂度
+```
+class Solution {
+    public int calculateMinimumHP(int[][] dungeon) {
+        int m =dungeon.length,n=dungeon[0].length;
+        int[][] dp = new int[m][n];
+        dp[m-1][n-1]= dungeon[m-1][n-1]>0?1:1-dungeon[m-1][n-1];
+
+        // for(int i=m-1;i>=0;i--){
+        for(int j=n-2;j>=0;j--){
+            dp[m-1][j] = Math.max(dp[m-1][j+1]-dungeon[m-1][j],1);
+        }
+        for(int i=m-2 ;i>=0;i--){
+            dp[i][n-1] = Math.max(dp[i+1][n-1]-dungeon[i][n-1],1);
+        }
+        for(int i=m-2;i>=0;i--){
+            for(int j = n-2;j>=0;j--){
+                    dp[i][j] = Math.max(Math.min(dp[i+1][j],dp[i][j+1])-dungeon[i][j],1);
+            }
+        }
+        return dp[0][0];
     }
 }
 ```
