--- a/递归合集/236. 二叉树的最近公共祖先.md
+++ b/递归合集/236. 二叉树的最近公共祖先.md
@@ -22,7 +22,7 @@
 所有节点的值都是唯一的。
 p、q 为不同节点且均存在于给定的二叉树中。
 ```
-# 递归
+# 递归遍历
 ```
 /**
  * Definition for a binary tree node.
@@ -34,23 +34,24 @@ p、q 为不同节点且均存在于给定的二叉树中。
  * }
  */
 class Solution {
+    private TreeNode ans;
+    public Solution(){
+        this.ans=null;
+    }
+    public boolean dfs(TreeNode root, TreeNode p,TreeNode q){//判断root为根节点时，pq有一个在树中就返回true
+        if(root==null){
+            return false;
+        }
+        boolean lson = dfs(root.left,p,q);
+        boolean rson = dfs(root.right,p,q);
+        if(lson && rson ||((root.val==p.val||root.val==q.val)&&(lson||rson))){
+            ans = root;
+        }
+        return lson||rson||(root.val==p.val||root.val==q.val);
+    }
     public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
-        if(p.val>q.val){
-            return lowestCommonAncestor(root,q,p);
-        }
-        //从上到下遍历，如果p<root.val且q>root.val，那么root就是最近公共祖先，
-        //如果都小于，那么进入root的左子树，再次判断，如果都大于，那么进入右子树
-        //如果root.val是q或者p，那么返回该root
-        if(p.val<=root.val && q.val>=root.val){
-            return root;
-        }
-        if(p.val<root.val && q.val<root.val){
-            return lowestCommonAncestor(root.left,p,q);
-        }
-        if(p.val>root.val && q.val>root.val){
-            return lowestCommonAncestor(root.right,p,q);
-        }
-        return null;
+        this.dfs(root,p,q);
+        return this.ans;
     }
 }
 ```
