--- a/双指针/1047. 删除字符串中的所有相邻重复项.md
+++ b/双指针/1047. 删除字符串中的所有相邻重复项.md
@@ -1,5 +1,6 @@
 题 https://leetcode-cn.com/problems/remove-all-adjacent-duplicates-in-string/
-
+## 1047. 删除字符串中的所有相邻重复项
+```
 给出由小写字母组成的字符串 S，重复项删除操作会选择两个相邻且相同的字母，并删除它们。
 
 在 S 上反复执行重复项删除操作，直到无法继续删除。
@@ -8,6 +9,8 @@
 
 
 答案 C:\Users\liwan\IdeaProjects\base-code\day04-code\src\main\java\leetcode
+```
+
 ```
 public class Q1047 {
 
